log
Tue Mar 16 22:37:36 UTC 2021: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:19: error: expected expression before ‘]’ token
   *suma = sumaN(a[],m);
                   ^
Compilation failed
Tue Mar 16 22:38:00 UTC 2021: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:20: error: expected expression before ‘]’ token
   *suma = sumaN(a[ ],m);
                    ^
Compilation failed
Tue Mar 16 22:38:05 UTC 2021: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
3dab0ae
Tue Mar 16 22:38:32 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
f96d8ea
Tue Mar 16 22:38:57 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
48b6cbb
Tue Mar 16 22:39:27 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
454ee5e
Tue Mar 16 22:42:21 UTC 2021: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
1fb5c6b
Tue Mar 16 22:44:22 UTC 2021: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|6
total_score: 10/70
984e285
Tue Mar 16 22:45:21 UTC 2021: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|6
total_score: 10/70
de63a37
Tue Mar 16 22:49:02 UTC 2021: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
d13d628
Tue Mar 16 22:49:39 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
5960028
Tue Mar 16 22:55:37 UTC 2021: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|6
total_score: 10/70
d897104
Tue Mar 16 22:58:09 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
c023cc3
Tue Mar 16 22:59:49 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
519a2e7
Tue Mar 16 23:05:32 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
57d329c
Tue Mar 16 23:06:25 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
da33317
Tue Mar 16 23:08:13 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
696197c
Tue Mar 16 23:11:23 UTC 2021: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|6
total_score: 10/70
a70af96
Tue Mar 16 23:11:44 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
77a9488
Tue Mar 16 23:13:13 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
66f6464
Tue Mar 16 23:13:46 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
863d8c3
Wed Mar 17 11:55:26 UTC 2021: 
 exercises.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  0|7
total_score: 0/70
1b3b429
Wed Mar 17 11:55:58 UTC 2021: 
 exercises.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
b2a5eae
Wed Mar 17 22:57:36 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
56e407e
Wed Mar 17 22:59:47 UTC 2021: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
1d9ac64
Wed Mar 17 23:02:13 UTC 2021: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
53518e0
Wed Mar 17 23:05:25 UTC 2021: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
204a8b1
Wed Mar 17 23:05:48 UTC 2021: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  4|3
total_score: 40/70
960c4a1
Wed Mar 17 23:06:59 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
896acc4
Wed Mar 17 23:10:31 UTC 2021: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|3
total_score: 40/70
8388201
Wed Mar 17 23:11:43 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
55e6aa3
Wed Mar 17 23:11:54 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
1a6ec27
Wed Mar 17 23:12:42 UTC 2021: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|4
total_score: 30/70
bd0e80e
